start main.py as second 'node'; use base image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,16 @@ services:
     volumes:
       - ./blockchain/blockchain_files:/app/blockchain/blockchain_files
     environment:
-      ENV SERVER_PORT: 9000
-      ENV NEIGHBORS_HOST_PORT: 127.0.0.1:9000
+      SERVER_PORT: 9000
+      NEIGHBORS_HOST_PORT: 127.0.0.1:9000
+    ports:
+      - "9000"
+
+  main_test:
+    build:
+      context: .
+      dockerfile: main_test.Dockerfile
+    environment:
+      NEIGHBORS_HOST_PORT: full_client1:9000
+    depends_on:
+      - full_client1
