implemented receive and send block methods of for full client, pubkey field not working

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Blockchain persistency related files
 blockchain/blockchain_files/
+blockchain/keys/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
