add genesis block

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Blockchain persistency related files
-blockchain/blockchain_files/
+blockchain/blockchain_files/*
+!blockchain/blockchain_files/0
+
 blockchain/keys/
 
 # Byte-compiled / optimized / DLL files
