--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
     environment:
       SERVER_PORT: 9000
       NEIGHBORS_HOST_PORT: genesis_admission:9000
+      REGISTER_AS_ADMISSION: 1
     ports:
       - "9000"
     depends_on:
