--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,26 +14,28 @@ services:
     ports:
       - "9000"
 
-  full_client1:
+  admission:
     build:
       context: .
       dockerfile: Full_Client.Dockerfile
     environment:
       SERVER_PORT: 9000
-      NEIGHBORS_HOST_PORT: genesis_admission:9000
+      NEIGHBORS_HOST_PORT: genesis_admission:9000,full_client:9000
       REGISTER_AS_ADMISSION: 1
     ports:
       - "9000"
     depends_on:
       - genesis_admission
-    volumes:
-      - ./blockchain/blockchain_files2:/app/blockchain/blockchain_files
 
-  main_test:
+  full_client:
     build:
       context: .
-      dockerfile: main_test.Dockerfile
+      dockerfile: Full_Client.Dockerfile
     environment:
-      NEIGHBORS_HOST_PORT: full_client1:9000
+      SERVER_PORT: 9000
+      NEIGHBORS_HOST_PORT: admission:9000,genesis_admission:9000
+    ports:
+      - "9000"
     depends_on:
-      - full_client1
+      - admission
+      - genesis_admission
