--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,21 +21,21 @@ services:
     environment:
       SERVER_PORT: 9000
       NEIGHBORS_HOST_PORT: genesis_admission:9000,full_client:9000
-      REGISTER_AS_ADMISSION: 1
+      REGISTER_AS_ADMISSION: 0
     ports:
       - "9000"
     depends_on:
       - genesis_admission
 
-  full_client:
-    build:
-      context: .
-      dockerfile: Full_Client.Dockerfile
-    environment:
-      SERVER_PORT: 9000
-      NEIGHBORS_HOST_PORT: admission:9000,genesis_admission:9000
-    ports:
-      - "9000"
-    depends_on:
-      - admission
-      - genesis_admission
+#  full_client:
+#    build:
+#      context: .
+#      dockerfile: Full_Client.Dockerfile
+#    environment:
+#      SERVER_PORT: 9000
+#      NEIGHBORS_HOST_PORT: admission:9000,genesis_admission:9000
+#    ports:
+#      - "9000"
+#    depends_on:
+#      - admission
+#      - genesis_admission
