--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       environment:
         SERVER_PORT: 9000
         NEIGHBORS_HOST_PORT: genesis_admission:9000, admission:9000
-        REGISTER_AS_DOCTOR: 1
+        START_TRANSACTION_CLI: 1
       ports:
         - "9000"
       depends_on:
